--- a/public/css/locker.css
+++ b/public/css/locker.css
@@ -1,20 +1,25 @@
-.filterContainer h2 {
-    font-size: 1rem;
-}
-
-.filterContainer .dropdown {
-    width: 100%;
+.lockerList {
+    margin: auto;
+    max-width: 600px;
 }
 
 .lockerList .col, .lockerList .col-sm-3 {
-    min-height: 100px;
-    padding: 5px;
+    aspect-ratio: 1/1;
+    min-height: 50px;
+    padding: 1%;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid var(--locker-border-color);
+    position: relative;
 }
 
 .lockerList .col > div, .lockerList .col-sm-3 > div {
     height: 100%;
-    padding-top: 1.8rem;
-    border: 5px solid #00b600;
+    border: 2px solid var(--locker-inner-border-color);
+}
+
+.lockerList p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
